<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <TextView
        android:id="@+id/lastQueriesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/queries_title"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/queriesLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/queriesLayout"
        android:layout_width="match_parent"
        android:layout_height="328dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="top|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/iViewMicrophone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- change to invisible when queries file has lines -->
        <android.support.v7.widget.CardView
            android:id="@+id/lastQuery"
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toTopOf="@+id/iViewMicrophone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastQueries">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:padding="1dp"
                    android:src="@drawable/question_mark" />

                <TextView
                    android:id="@+id/textLastQueries"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/default_query_message" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/currentForecastLayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/current_forecast_title"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <include layout="@layout/current_forecast_card" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tomorrowForecastLayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/tomorrow_forecast_title"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <include layout="@layout/tomorrow_forecast_card" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/locationLayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/location_title"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <include layout="@layout/location_card" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/iViewMicrophone"
        android:layout_width="118dp"
        android:layout_height="87dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/microphone" />


</android.support.constraint.ConstraintLayout>